fix: corrigir texto do segundo e terceiro post
Corrigir texto inicial do segundo post na página principal para
combinar com o texto completo e retirar referências vazias na
seção Recepção do terceiro post.

--- a/gow.html
+++ b/gow.html
@@ -104,12 +104,12 @@
       <hr>
       <h4 class="section-topic">Recepção</h4>
       <p>Em novembro de 2020, o jornal The New York Times informou que a série tinha vendido mais de 51 
-        milhões de cópias em todo o mundo.[72] God of War (2005), God of War II, Chains of Olympus, 
+        milhões de cópias em todo o mundo. God of War (2005), God of War II, Chains of Olympus, 
         God of War Collection, God of War III, God of War (2018) e Ragnarök receberam aclamação da 
-        crítica por vários revisores, compilados pelo agregador de resenhas Metacritic,[57][58][60][61]
-        [63][69][71] com os títulos de 2005, 2018 e Ragnarök estando empatados como a maior pontuação 
-        da franquia, com uma nota 94/100.[57][69][71] Betrayal e Ghost of Sparta receberam críticas 
-        geralmente favoráveis.[4][64] Ascension também obteve uma recepção geralmente favorável e, não 
+        crítica por vários revisores, compilados pelo agregador de resenhas Metacritic,
+         com os títulos de 2005, 2018 e Ragnarök estando empatados como a maior pontuação 
+        da franquia, com uma nota 94/100. Betrayal e Ghost of Sparta receberam críticas 
+        geralmente favoráveis. Ascension também obteve uma recepção geralmente favorável e, não 
         incluindo o porte God of War Collection para PlayStation Vita, tem a menor pontuação da série 
         no Metacritic e GameRankings (80/100 e 79.34%, respectivamente).</p>
       
