feat: adicionar tags sections para os posts

--- a/valorant.html
+++ b/valorant.html
@@ -46,45 +46,49 @@
           Fonte: <a target="_blank" href="https://playvalorant.com/pt-br/">RIOT Games</a>
         </p>
       </div>
-
-      <h3 class="section-title">Jogabilidade</h3>
-      <hr>
-      <p>Duas equipes de cinco jogam uma contra a outra, e os jogadores assumem o papel de "agentes" 
-        com habilidades únicas. No modo de jogo principal, a equipe atacante tem uma bomba, chamada 
-        Spike, que eles precisam plantar em um local. Se a equipe atacante proteger com sucesso a 
-        bomba e ela detonar, eles ganharão um ponto. Se a equipe defensora desarmar com sucesso a 
-        bomba ou o cronômetro de 100 segundos da rodada expirar, a equipe defensora receberá um ponto. 
-        Eliminar todos os membros da equipe adversária também ganha uma rodada. A primeira equipe a 
-        vencer o melhor de 24 rodadas vence a partida.</p>
-      <div class="img-container">
-        <img src="assets/images/valorant-ranked.jpg" alt="Uma partida ranqueada em Valorant">
-        <p class="img-description">
-          Fonte: <a target="_blank" href="https://www.pichauarena.com.br/valorant/5-dicas-para-melhorar-sua-gameplay-no-valorant/">
-            PICHAU Arena</a>
-        </p>
-      </div>
-
-      <h3 class="section-title">Recepção</h3>
-      <hr>
-      <h4 class="section-topic">Recepção Inicial</h4>
-      <p>Valorant foi comparado ao Counter-Strike: Global Offensive da Valve, com ambos os jogos 
-        tendo duas equipes de cinco jogadores tentando plantar uma bomba, e ao Overwatch da 
-        Blizzard Entertainment, já que ambos os jogos têm várias classes e personagens atendendo 
-        a vários estilos de jogo.</p>
-      <h4 class="section-topic">Problemas enfrentados no jogo</h4>
-      <p>Valorant recebeu críticas por seu sistema de comunicação de voz tóxico e dominado por homens. 
-        Emily Rand, da ESPN, falou sobre sua experiência negativa jogando em times que usam a função 
-        de comunicação por voz como mulher. Rand "recusa-se terminantemente a usá-lo" quando não está 
-        brincando com seus amigos. Jordon Oloman, do The Guardian, explica como "as maçãs podres entre 
-        os jogadores de Valorant esperam um nível absurdo de perfeição, e as críticas resultante do 
-        bate-papo por voz dificilmente são construtivas".</p>
-    <h4 class="section-topic">Prêmios</h4>
+      <section>
+        <h3 class="section-title">Jogabilidade</h3>
+        <hr>
+        <p>Duas equipes de cinco jogam uma contra a outra, e os jogadores assumem o papel de "agentes" 
+          com habilidades únicas. No modo de jogo principal, a equipe atacante tem uma bomba, chamada 
+          Spike, que eles precisam plantar em um local. Se a equipe atacante proteger com sucesso a 
+          bomba e ela detonar, eles ganharão um ponto. Se a equipe defensora desarmar com sucesso a 
+          bomba ou o cronômetro de 100 segundos da rodada expirar, a equipe defensora receberá um ponto. 
+          Eliminar todos os membros da equipe adversária também ganha uma rodada. A primeira equipe a 
+          vencer o melhor de 24 rodadas vence a partida.</p>
+        <div class="img-container">
+          <img src="assets/images/valorant-ranked.jpg" alt="Uma partida ranqueada em Valorant">
+          <p class="img-description">
+            Fonte: <a target="_blank" href="https://www.pichauarena.com.br/valorant/5-dicas-para-melhorar-sua-gameplay-no-valorant/">
+              PICHAU Arena</a>
+          </p>
+        </div>
+      </section>
+      <section>
+        <h3 class="section-title">Recepção</h3>
+        <hr>
+        <h4 class="section-topic">Recepção Inicial</h4>
+        <p>Valorant foi comparado ao Counter-Strike: Global Offensive da Valve, com ambos os jogos 
+          tendo duas equipes de cinco jogadores tentando plantar uma bomba, e ao Overwatch da 
+          Blizzard Entertainment, já que ambos os jogos têm várias classes e personagens atendendo 
+          a vários estilos de jogo.</p>
+        <h4 class="section-topic">Problemas enfrentados no jogo</h4>
+        <p>Valorant recebeu críticas por seu sistema de comunicação de voz tóxico e dominado por homens. 
+          Emily Rand, da ESPN, falou sobre sua experiência negativa jogando em times que usam a função 
+          de comunicação por voz como mulher. Rand "recusa-se terminantemente a usá-lo" quando não está 
+          brincando com seus amigos. Jordon Oloman, do The Guardian, explica como "as maçãs podres entre 
+          os jogadores de Valorant esperam um nível absurdo de perfeição, e as críticas resultante do 
+          bate-papo por voz dificilmente são construtivas".</p>
+      </section>
+      <section>
+      <h4 class="section-topic">Prêmios</h4>
       <p>Foi indicado para Melhor Jogo de Esports, Melhor Multijogador e Melhor Suporte à Comunidade 
         no The Game Awards 2020. Venceu como Melhor Jogo de Esports no The Game Awards 2022.</p>
       <h3 class="section-title">Referências</h3>
       <hr>
       <p><a target="_blank" href="https://pt.wikipedia.org/wiki/Valorant">
         Valorant</a>.<i> Wikipedia.</i></p>
+      </section>
     </article>
   </main>
   <a href="#" id="to-top">Voltar ao Início</a>
